Wed  Mar 10 2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed "y3k" bug in the Advanced Search, where you couldn't select
       a year greater than 2003, thanks to hardcoded values.  Oops.
     * Fixed some scoping issues in a quest to "use strict".

Tue  Mar  9 2004	H. Wade Minter (minter@lunenburg.org)
     * Win32 path cleanups for the dump_database and import_database
       functions.

Mon  Mar  8 2004	H. Wade Minter (minter@lunenburg.org)
     * Win32 path fix for bulk_add function, that prevented the addition
       of files with spaces in the path names.

Fri  Mar  5 2004	H. Wade Minter (minter@lunenburg.org)
     * Rework the 1.10 database update to be a little nicer, including
       giving the user a chance to back up their database.

Thu  Mar  4 2004	H. Wade Minter (minter@lunenburg.org)
     * Give the main or Tank listboxes focus() when they're clicked on. 
       Allows for keyboard navigation.
     * Use Time::HiRes for reporting search times - sub-second accuracy.
     * Reimplement the build_category_menubutton to make proper use of
       variable references in the -variable option.  Failure to do so 
       broke the whole system.

Tue  Mar  2 2004	H. Wade Minter (minter@lunenburg.org)
     * More switching to fetchrow_hashref to improve readability.
     * Consolidate a bunch of repeated category menubutton code into
       one function.

Sun  Feb 29 2004	H. Wade Minter (minter@lunenburg.org)
     * Lots of minor cleanup while working on the TPJ article.
     * Switched the XPM of the sound icon over to a GIF for a space 
       savings.

Fri  Feb 27 2004	H. Wade Minter (minter@lunenburg.org)
     * Switching the BrowseEntry search fields back to plain Entry widgets - 
       the embedded xbm was causing problems with PAR, and I don't think 
       anyone used the dropdown functionality anyway.

Wed  Feb 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Module cleanup - PAR/Win32 needs the inclusion of Encode::Unicode,